--- a/Android/OpiniaoDeTudo/app/src/main/AndroidManifest.xml
+++ b/Android/OpiniaoDeTudo/app/src/main/AndroidManifest.xml
@@ -5,6 +5,10 @@
 
     <dist:module dist:instant="true"/>
 
+    <uses-feature
+            android:name="android.hardware.camera"
+            android:required="true" />
+
     <application
             android:allowBackup="true"
             android:icon="@mipmap/ic_launcher"
@@ -20,6 +24,15 @@
             </intent-filter>
         </activity>
         <activity android:name=".ListActivity"/>
+        <provider
+                android:name="androidx.core.content.FileProvider"
+                android:authorities="com.androiddesenv.opiniaodetudo.fileprovider"
+                android:exported="false"
+                android:grantUriPermissions="true">
+            <meta-data
+                    android:name="android.support.FILE_PROVIDER_PATHS"
+                    android:resource="@xml/file_paths" />
+        </provider>
     </application>
 
 </manifest>
