--- a/Android/OpiniaoDeTudo/app/src/main/AndroidManifest.xml
+++ b/Android/OpiniaoDeTudo/app/src/main/AndroidManifest.xml
@@ -9,13 +9,16 @@
             android:name="android.hardware.camera"
             android:required="true" />
 
+    <uses-permission android:name="android.permission.RECORD_AUDIO" />
+    <uses-permission android:name="android.permission.CAMERA" />
+
     <application
             android:allowBackup="true"
             android:icon="@mipmap/ic_launcher_new"
             android:label="@string/app_name"
             android:roundIcon="@mipmap/ic_launcher_new_round"
             android:supportsRtl="true"
-            android:theme="@style/AppTheme">
+            android:theme="@style/AppTheme.NoActionBar">
         <activity android:name=".MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
